# p2z-tests

./: .gitignore  .propagate-toz-test_CUDA.cu.swp  .propagate-toz-test_CUDA_v2.cu.swp  .propagate-toz-test_Eigen.C.swp  .propagate-toz-test_OpenACC.cpp.swp  .propagateGPU.cu.swp  KokkosCore_config.h  Makefile  Makefile2  O2GBuild.script  README.md  README_OpenARC.md  build-dpl.sh  build-pstl-x86.sh  build_cuda_accessors.sh  build_cuda_native.sh  compare.sh  cpu.txt  cudatest  kokkos_config.h  kokkos_gemm.cpp  kokkos_gemm.h  kokkos_gemm_test.cpp.bu  openarcConf_NORMAL.txt  perf.data  propagate  propagate-toz-pseudocode.txt  propagate-toz-test-main.cc  propagate-toz-test.C  propagate-toz-test.c  propagate-toz-test.cpp  propagate-toz-test.cpp.ex  propagate-toz-test.cu  propagate-toz-test.h  propagate-toz-test_1thread.out  propagate-toz-test_CUDA.cu  propagate-toz-test_CUDA_v2.cu  propagate-toz-test_Eigen.C  propagate-toz-test_Eigen.cpp  propagate-toz-test_Eigen.cu  (+39 more)
archived-src/: build-pstl-accessors.sh  build-pstl-native.sh  build-sycl.sh  build-tbb.sh  build_cuda_accessors.sh  build_cuda_native.sh  build_cuda_v4.sh  propagate-toz-test_OpenACC_sync_v1.cpp  propagate-toz-test_OpenACC_sync_v3.cpp  propagate-toz-test_OpenMP4_sync_v1.cpp  propagate-toz-test_cuda_accessors.cu  propagate-toz-test_cuda_hybrid_accessors.cpp  propagate-toz-test_cuda_uvm.cu  propagate-toz-test_pstl_accessors.cpp
backup/: Makefile2  helixAtZ-test-numpy-cupy.out  helixAtZ-test-numpy-cupy.py  propagate-toz-test-main.cc  propagate-toz-test.h  propagate-toz-test_Eigen.cpp  propagate-toz-test_Eigen_v2.cpp  propagate-toz-test_OpenACC.C  propagate-toz-test_OpenACC.c  propagate-toz-test_OpenACC_v1.cpp  propagate-toz-test_OpenACC_v3.cpp  propagate-toz-test_OpenACC_v4.c  propagate-toz-test_OpenACC_v5.c  propagate-toz-test_OpenACC_v5.cpp  propagate-toz-test_OpenACC_v5_async.c  propagate-toz-test_OpenACC_v6_async.cpp  propagate-toz-test_OpenMP4_v6.c  propagate-toz-test_alpaka_v2.cpp  propagate-toz-test_pstl.cpp  propagate-toz-test_pstl_v1.cpp  propagate-toz-test_pstl_v12-2.cpp  propagate-toz-test_pstl_v13.cpp  propagate-toz-test_pstl_v16-1-raw.cpp  propagate-toz-test_pstl_v18.cpp  propagate-toz-test_pstl_v2.cpp  propagate-toz-test_pstl_v3.cpp  propagate-toz-test_pstl_v4.cpp  propagate-toz-test_pstl_v5-broken.cpp  propagate-toz-test_pstl_v5.cpp  propagate-toz-test_pstl_v6.cpp  propagate-toz-test_v1.c  propagate-toz-test_v3.c
notebooks/: PaperPlots.ipynb
presentations/: 20230523_P2Z_GPUResults.out  P2Z_nsight_10_13_2020.pptx  layers_data_10_13_2020.xlsx
src/: README.md  input_track.h  input_track_eigen.h  propagate-toz-test_CUDA.cu  propagate-toz-test_CUDA_v0.cu  propagate-toz-test_CUDA_v1.cu  propagate-toz-test_CUDA_v2.cu  propagate-toz-test_CUDA_v3.cu  propagate-toz-test_CUDA_v4.cu  propagate-toz-test_Eigen.cpp  propagate-toz-test_Eigen.cu  propagate-toz-test_Eigen_v2.cu  propagate-toz-test_OMP.cpp  propagate-toz-test_OpenACC.c  propagate-toz-test_OpenACC.cpp  propagate-toz-test_OpenACC_async.c  propagate-toz-test_OpenACC_async_v4.c  (+40 more)
src/alpaka_src_gpu/: CMakeLists.txt  Readme.md  config.sh
src/alpaka_src_gpu/src/: propagate-toz-test_alpaka_cpu_gpu.cpp  propagate-toz-test_alpaka_cpu_gpu_v4.cpp  propagate-toz-test_alpaka_gpu.cpp
tools/: compare.py  (+9 more)
(+105 files in other folders)
